# filex

./: CMakeLists.txt
src/: file_explorer.c  file_explorer.h  main.c  ui.c  ui.h
